--- a/website/templates/base.html
+++ b/website/templates/base.html
@@ -38,8 +38,8 @@
 
     {% with messages= get_flashed_messages(with_categories=true) %}
     {% if messages %}
-       {% for category, message in messages}
-       {% if category == 'error'}
+       {% for category, message in messages %}
+       {% if category == 'error' %}
        <div class="alert alert-danger alter-dissmissable fade show" role="alert">
          {{message}}
          <button type="button" class="close" data-dismiss="alert">
